# gr33d

./: CMakeLists.txt  README.md  main.cpp
include/: board.hpp  header.hpp  player.hpp
src/: board.cpp  glob_func.cpp  player.cpp
